# gw_log_sys

./: .clang-tidy  .clangd  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SUPPORTED.md  change_log.md
.github/ISSUE_TEMPLATE/: bug_report.md  code-suggestion-request.md  feature_request.md  suggestion.md
include/: gw_build_dll.hpp  gw_level.hpp  gw_logger.hpp  gw_message.hpp
scripts/: build_single_target.py  pack_single_target.py  run_all_scripts_for_all_targets_with_tests.py  run_all_scripts_for_all_targets_without_tests.py  run_all_scripts_for_single_target_with_tests.py  run_all_scripts_for_single_target_without_tests.py  run_tests_for_single_target.py
scripts/cmake/linux/: build_single_target.py  pack_single_target.py  run_all_scripts_for_all_targets_with_tests.py  run_all_scripts_for_all_targets_without_tests.py  run_tests_for_single_target.py
scripts/cmake/windows/: build_single_target.py  pack_single_target.py  run_all_scripts_for_all_targets_with_tests.py  run_all_scripts_for_all_targets_without_tests.py  run_tests_for_single_target.py
scripts/linux/assets/: compilers_supported.ini  generators_supported.ini
scripts/linux/building/multi_target/: library.py
scripts/linux/building/single_target/: library.py
scripts/linux/packaging/multi_target/: library.py
scripts/linux/packaging/single_target/: library.py
scripts/linux/running/: tests.py
scripts/powershell/windows/: build_all_releases.ps1  build_release.ps1
scripts/windows/assets/: compilers_supported.ini  generators_supported.ini  library_types_supported.ini
scripts/windows/building/multi_target/: library.py
scripts/windows/building/single_target/: library.py
scripts/windows/packaging/multi_target/: library.py
scripts/windows/packaging/single_target/: library.py
scripts/windows/running/: tests.py
src/: gw_logger.cpp  gw_message.cpp
src/include/: gw_color.hpp  gw_level_message.hpp
test/general_testing/src/: test_gw_logger.cpp  test_gw_message.cpp
tests/include/: gw_test_logger.hpp  gw_test_message.hpp
tests/source/: gw_test_logger.cpp  gw_test_message.cpp
